# ISIC2024

./: .gitignore  README.md  main.py  pyproject.toml
docs/: index.html
docs/source/: conf.py  index.rst  refs.bib
docs/source/_static/: custom.css
docs/source/models/: models.rst
docs/source/notes/: notes.rst
isic/: callbacks.py  datasets.py  models.py  preprocess.py  registry.py
