[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "isic"
authors = [
    {name = "Mark Zimmerman", email = "mzimm003@gmail.com"},
]
version = "0.0.1"

[tool.poetry.dependencies]
torch="*"
numpy="*"
pandas="*"
pillow="*"
h5py="*"
scikit-learn="*"
onnxruntime-gpu="*"


[tool.poetry]
name = "isic"
version = "0.1.0"
description = ""
authors = ["Mark Zimmerman <mzimm003@gmail.com>"]
readme = "README.md"
packages = [{include = "isic"}]

[project.urls]
Homepage = "https://github.com/mzimm003/ISIC2024"
Issues = "https://github.com/mzimm003/ISIC2024/issues"